# macro_railroad

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
benches/: quick_error.rs
examples/: extract_from_docs.py  nom_examples.html  src_to_svg.rs  stdlib_examples.html  syn_examples.html  various.rs  various_examples.html
src/: diagram.rs  lib.rs  lowering.rs  parser.rs
tests/: svg11-flat.dtd  verification.rs
