[package]
name = "macro_railroad"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library to generate syntax diagrams for Rust macros"
repository = "https://github.com/lukaslueg/macro_railroad"
readme = "README.md"
exclude = ["examples/*.jpeg", "examples/*.jpg", "examples/*.svg", "examples/*.html"]

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
railroad = "0.1"
proc-macro2 = { version = "0.4", default-features=false }

[dev-dependencies]
lazy_static = "1.1"
quote = "0.6"
railroad_verification = "0.1"
htmlescape = "0.3"

[features]
visual-debug = ["railroad/visual-debug"]
