[package]
name = "macro_railroad"
version = "0.1.2"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library to generate syntax diagrams for Rust macros"
repository = "https://github.com/lukaslueg/macro_railroad"
readme = "README.md"
exclude = ["examples/*.jpeg", "examples/*.jpg", "examples/*.svg", "examples/*.html"]

[dependencies]
syn = { version = "1.0", features = ["full", "parsing"], default_features=false }
railroad = "0.1"
proc-macro2 = { version = "1.0", default-features=false }

[dev-dependencies]
lazy_static = "1.1"
quote = { version = "1.0", default_features = false }
railroad_verification = "0.1"
htmlescape = "0.3"

[features]
default = ["extra-traits"]
visual-debug = ["railroad/visual-debug"]
extra-traits = ["syn/extra-traits"]
